2004-11-29  Jim Blandy  <jimb@redhat.com>

	* lwp-pool.c (wait_flags_str): Return "0" when FLAGS == 0, not the
	empty string.

2004-11-23  Jim Blandy  <jimb@redhat.com>

	Separate management of kernel-level LWPs from that of libpthread /
	libthread_db-level threads.
	* lwp-pool.c, lwp-pool.h: New files.
	* thread-db.c: #include "lwp-ctrl.h" and "lwp-pool.h".
	(struct gdbserv_thread): Delete members 'attached', 'stopped',
	'waited', and 'stepping'.  This structure is now just a
	'td_thrinfo_t' and a list link.  Describe some quirks in the
	meanings of certain 'ti' fields.
	(thread_list_lookup_by_lid): Move later in file, so we can use
	information directly from our proc handle.  Be skeptical of ZOMBIE
	or UNKNOWN threads whose LWP ID is equal to the PID in the proc
	handle.
	(thread_debug_name): Move later in file, so we can use
	thread_db_state_str.
	(attach_thread): Use lwp pool functions to attach.  Attach to
	zombies.  When using signal-based communication, send the thread
	the restart signal immediately.
	(find_new_threads_callback): Go ahead and attach to all threads.
	The LWP pool functions tolerate attaching to a given LWP more than
	once.
	(update_thread_list): Take the process as an argument.  If the
	focus thread has disappeared, set process->focus_thread to NULL.
	(thread_db_thread_next): Pass the process to update_thread_list.
	(stop_thread, stop_all_threads, add_pending_event,
	delete_pending_event, select_pending_event, send_pending_signals,
	wait_all_threads, continue_all_threads): Deleted.
	(handle_thread_db_event): Renamed from handle_thread_db_events.
	Take the process structure as an argument, and check only for a
	thread-db event notification from process->event_thread.  Use LWP
	pool functions.
	(continue_thread, singlestep_thread): Use LWP pool functions.
	(thread_db_continue_program, thread_db_singlestep_program,
	thread_db_continue_thread, thread_db_singlestep_thread): Use LWP
	pool functions, and update process->focus_thread appropriately.